--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --node-env production",
-    "dev": "webpack serve --node-env development"
+    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.js --progress",
+    "dev": "webpack serve --config webpack/webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/lodash": "^4.14.168",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^8.1.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
+    "css-minimizer-webpack-plugin": "^1.3.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.0",
     "sass": "^1.32.8",
@@ -23,7 +28,8 @@
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "@babylonjs/core": "^4.2.0",
