--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.js --progress",
-    "dev": "webpack serve --config webpack/webpack.dev.js"
+    "dev": "webpack serve --config webpack/webpack.dev.js",
+    "lint": "eslint --ext ts,tsx src/*"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
     "css-minimizer-webpack-plugin": "^1.3.0",
+    "eslint": "^7.23.0",
+    "eslint-webpack-plugin": "^2.5.3",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.0",
     "sass": "^1.32.8",
@@ -34,10 +37,13 @@
   "dependencies": {
     "@babylonjs/core": "^4.2.0",
     "@babylonjs/loaders": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "babylonjs": "^4.2.0",
     "babylonjs-gui": "^4.2.0",
     "babylonjs-loaders": "^4.2.0",
     "babylonjs-materials": "^4.2.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "typescript-eslint": "0.0.1-alpha.0"
   }
 }
