--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "author": "Quentin Vanbutsele",
   "license": "ISC",
-
   "devDependencies": {
     "@types/lodash": "^4.14.168",
     "babel-core": "^6.26.3",
@@ -34,6 +33,7 @@
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
