--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "babylon-evolved",
-  "version": "0.0.3",
+  "name": "babylonjs-advanced-boilerplate",
+  "version": "0.0.4",
   "description": "An advanced version of babylon to handle generic level design and mechanics with webpack build configuration",
   "repository": {
     "type": "git",
@@ -13,17 +13,22 @@
     "lint": "eslint --ext ts,tsx src/*"
   },
   "author": "Quentin Vanbutsele",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "devDependencies": {
-    "@types/lodash": "^4.14.168",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.2",
-    "babel-preset-env": "^1.7.0",
+    "@babylonjs/core": "^4.2.0",
+    "@babylonjs/gui": "^4.2.0",
+    "@babylonjs/inspector": "^4.2.0",
+    "@babylonjs/loaders": "^4.2.0",
+    "@babylonjs/materials": "^4.2.0",
+    "@babylonjs/post-processes": "^4.2.0",
+    "@babylonjs/serializers": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "copy-webpack-plugin": "^8.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
     "css-minimizer-webpack-plugin": "^1.3.0",
-    "eslint": "^7.23.0",
+    "eslint": "^7.27.0",
     "eslint-webpack-plugin": "^2.5.3",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.0",
@@ -38,16 +43,5 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   },
-  "dependencies": {
-    "@babylonjs/core": "^4.2.0",
-    "@babylonjs/loaders": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "babylonjs": "^4.2.0",
-    "babylonjs-gui": "^4.2.0",
-    "babylonjs-loaders": "^4.2.0",
-    "babylonjs-materials": "^4.2.0",
-    "lodash": "^4.17.21",
-    "typescript-eslint": "0.0.1-alpha.0"
-  }
+  "dependencies": {}
 }
